clicking change on product form now takes you back to previous page

--- a/app/views/pages/product_form.html.haml
+++ b/app/views/pages/product_form.html.haml
@@ -15,7 +15,7 @@
           %label.control-label Product: 
           .controls{ style: "margin-top: 4px; "}
             %span{ style: "font-size: 18px; "} Talent Miner - Ultra
-            = link_to "Change", "#", style:"margin-left: 10px;"
+            = link_to "Change", "javascript:history.back()", style: "margin-left: 10px; "
         .control-group
           %label.control-label{ for: "inputName"} Your Name
           .controls
