--- a/app/views/mailer/content_sub_alert.html.haml
+++ b/app/views/mailer/content_sub_alert.html.haml
@@ -32,5 +32,7 @@
                           %a{ href: @follow_url, style: "color:#fff;font-size:12px;font-weight:bold;text-decoration:none", target: "_blank"} Follow
   
 
-%p{ style: "font-size:12px; margin-bottom: 0;"} Thanks,
-%p{ style: "font-size:12px; margin-top: 0;"} The MetaBright Team
+%p{ style: "font-size:12px;"} 
+  Thanks,
+  %br
+  Team MetaBright
