--- a/app/views/mailer/welcome.html.haml
+++ b/app/views/mailer/welcome.html.haml
@@ -1,4 +1,4 @@
-%span{ style: "font-size:24px;"} Welcome to <a href="http://www.metabright.com" style="text-decoration:none; color:inherit;">MetaBright</a>, #{@user.name.split.first}!
+%span{ style: "font-size:22px;"} Welcome to <a href="http://www.metabright.com" style="text-decoration:none; color:inherit;">MetaBright</a>, #{@user.name.split.first}!
 %br/
 %hr{ style: "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
 %p{ style: "font-size:12px;"} Thanks for signing up for <a href="http://www.metabright.com">MetaBright</a>. Remember to always choose the same option to log in to MetaBright as you did to sign up. Otherwise, you might accidentally create two separate accounts.
@@ -6,4 +6,4 @@
 %p{ style: "font-size:12px;"} 
   Thanks,
   %br
-  The MetaBright Team
+  Team MetaBright
