--- a/app/views/mailer/contribution_unlocked.html.haml
+++ b/app/views/mailer/contribution_unlocked.html.haml
@@ -1,4 +1,4 @@
-%span{:style => "font-size:24px;"} Congratulations!
+%span{:style => "font-size:22px;"} Congratulations!
 %br/
 %span{:style => "font-size:14px; font-style:italic;"} You've unlocked a new power...
 %hr{:style => "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
@@ -11,4 +11,4 @@
 %p{:style => "font-size:12px;"} 
   Thanks,
   %br/
-  The MetaBright Team
+  Team MetaBright
