--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -41,7 +41,7 @@
               %li Standard URL
               %li 24/7 Email support
             .price_footer
-              %a.action_button{:href => "/product_form"} Select
+              = link_to "Select", product_form_path(p: Opportunity::EVAL_BASIC), class: "action_button"
           %li.price_block
             %h3 Intermediate
             .price
@@ -55,7 +55,7 @@
               %li Standard URL
               %li 24/7 Email support
             .price_footer
-              %a.action_button{:href => "/product_form"} Select
+              = link_to "Select", product_form_path(p: Opportunity::EVAL_PRO), class: "action_button"
           %li.price_block
             %h3 Professional
             .price
@@ -69,7 +69,7 @@
               %li Customized URL
               %li 24/7 Email support
             .price_footer
-              %a.action_button{:href => "/product_form"} Select
+              = link_to "Select", product_form_path(p: Opportunity::EVAL_ENT), class: "action_button"
           %li.price_block
             %h3 Enterprise
             .price
@@ -83,4 +83,4 @@
               %li Customized URL
               %li 24/7 Email support
             .price_footer
-              %a.action_button{:href => "/product_form"} Select
+              = link_to "Select", product_form_path(p: Opportunity::EVAL_ULTRA), class: "action_button"
