--- a/app/views/pages/product_form.html.haml
+++ b/app/views/pages/product_form.html.haml
@@ -10,11 +10,12 @@
     .body
       %div
         %h4 Submit this form and someone from our team will get in touch to learn about your business and to get you set up. If it turns out MetaBright isn't for you, you're under no obligation to complete the transaction.
-      = form_for(Opportunity.new, url: opportunity_path, html: { class: "form-horizontal" }) do |f|
+      = form_for(@opportunity, url: opportunity_path, html: { class: "form-horizontal" }) do |f|
         .control-group
           %label.control-label Product: 
           .controls{ style: "margin-top: 4px; "}
-            %span{ style: "font-size: 18px; "} Talent Miner - Ultra
+            %span{ style: "font-size: 18px; "}= Opportunity::PRODUCTS[@opportunity.product.to_i]
+            = f.hidden_field :product
             = link_to "Change", "javascript:history.back()", style: "margin-left: 10px; "
         .control-group
           %label.control-label{ for: "inputName"} Your Name
