changes to employer

--- a/app/views/pages/employers.html.haml
+++ b/app/views/pages/employers.html.haml
@@ -6,7 +6,7 @@
   .aboutbox
     .aboutheader
       %img{ src: STONEY_SMALL_URL, alt: "Stoney"}
-      %span Turbocharge your hiring
+      %span Turbocharge your recruiting
     .body
       %div
         %h2
