--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -12,9 +12,10 @@
     .body
       %div
         %h2
-          Optimize your interviews
+          Optimize your sourcing
         %p
-          Never waste your time in an interview again. MetaBright's <strong>Evaluator</strong> measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. Just give your candidates a unique MetaBright URL, and we take care of the rest. 
+          Never waste your time in an interview again. MetaBright's <strong>Evaluator</strong> measures and verfies the skills of your job candidates <span style="font-family: 'MuliItalic';">before</span> you interview them. 
+          Just direct your candidates to your unique MetaBright URL, and we take care of the rest. 
         %h3
           Our philosophy
         %p
@@ -22,57 +23,97 @@
         %h3 
           How it works
         %ol
-          %li Identify the skills where you want your candidates evaluated.
-          %li Include your unique MetaBright URL with your job posting. 
-          %li MetaBright evaluates the skills of each candidate, and you decide who to interview.
+          %li Choose the skills where you want your candidates measured.
+          %li We'll give you a unique MetaBright URL.
+          %li Include your this URL with your job posting. 
+          %li MetaBright evaluates the skills of each candidate, and you decide who to interview. 
+        %h3 FAQ
+        #faq_accordion.accordion          
+          .accordion-group
+            .accordion-heading
+              %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseTwo"}
+                How are my candidates evaluated?
+            #collapseTwo.accordion-body.collapse.in
+              .accordion-inner
+                We evaluate your candidates with things called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
+                We distill all this information down into one easy to understand percentile ranking that indicates how capable your candidates actually are.
+          .accordion-group
+            .accordion-heading
+              %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseThree"}
+                How many Challenges do I need?
+            #collapseThree.accordion-body.collapse
+              .accordion-inner
+                Anticipate which skills you want your candidates evaluated on. Multiply this count by the number of candidates you expect to measure. 
+                (It’s typically best to get more Challenges than you think you’ll need because your unused Challenges will roll over from the previous month.)
+          .accordion-group
+            .accordion-heading
+              %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFour"}
+                How long will it take for my candidates to complete a Challenge?
+            #collapseFour.accordion-body.collapse
+              .accordion-inner
+                Each Challenge can be completed in less than 10 minutes.
+          .accordion-group
+            .accordion-heading
+              %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFive"}
+                How does MetaBright work to prevent cheating?
+            #collapseFive.accordion-body.collapse
+              .accordion-inner
+                MetaBright questions are timed so we have a good understanding of who actually knows the material and who is trying to cheat (or who is getting lucky with a guess!). 
+                Our algorithms look for irregularities when a candidate is taking a Challenge and adjust their percentile accordingly.
+          .accordion-group
+            .accordion-heading
+              %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseSix"}
+                Why does MetaBright look so playful?
+            #collapseSix.accordion-body.collapse
+              .accordion-inner
+                We’ve found that people are more likely to stay engaged with a Challenge when incentives are in place to make the process feel like a game. 
+                This means we can evaluate your candidates with a higher degree of confidence and we can deliver more examples of their abilities! 
         %h3 
           Evaluator Pricing
-        %ul.pricing_table
-          %li.price_block
-            %h3 Basic
-            .price
-              .price_figure
-                %span.price_number $10
-                %span.price_tenure per user, per month
-            %ul.features
-              %li 10 skill assessments
-              %li Standard URL
-              %li --
-            .price_footer
-              = link_to "Select", product_form_path(p: Opportunity::EVAL_BASIC), class: "action_button"
-          %li.price_block
-            %h3 Professional
-            .price
-              .price_figure
-                %span.price_number $49
-                %span.price_tenure per user, per month
-            %ul.features
-              %li 100 skill assessments
-              %li Standard URL
-              %li Email support
-            .price_footer
-              = link_to "Select", product_form_path(p: Opportunity::EVAL_PRO), class: "action_button"
-          %li.price_block
-            %h3 Enterprise
-            .price
-              .price_figure
-                %span.price_number $199
-                %span.price_tenure per user, per month
-            %ul.features
-              %li 500 skill assessments
-              %li Customized URL
-              %li Email and phone support
-            .price_footer
-              = link_to "Select", product_form_path(p: Opportunity::EVAL_ENT), class: "action_button"
-          %li.price_block
-            %h3 Ultimate
-            .price
-              .price_figure
-                %span.price_number $299
-                %span.price_tenure per user, per month
-            %ul.features
-              %li 1,000 skill assessments
-              %li Customized URL
-              %li Email and phone support
-            .price_footer
-              = link_to "Select", product_form_path(p: Opportunity::EVAL_ULTRA), class: "action_button"
+        %div  
+          %ul.pricing_table
+            %li.price_block
+              %h3 Basic
+              .price
+                .price_figure
+                  %span.price_number $10
+                  %span.price_tenure per user, per month
+              %ul.features
+                %li 10 Challenges
+                %li --
+              .price_footer
+                = link_to "Select", product_form_path(p: Opportunity::EVAL_BASIC), class: "action_button"
+            %li.price_block
+              %h3 Professional
+              .price
+                .price_figure
+                  %span.price_number $49
+                  %span.price_tenure per user, per month
+              %ul.features
+                %li 100 Challenges
+                %li Email support
+              .price_footer
+                = link_to "Select", product_form_path(p: Opportunity::EVAL_PRO), class: "action_button"
+            %li.price_block
+              %h3 Enterprise
+              .price
+                .price_figure
+                  %span.price_number $199
+                  %span.price_tenure per user, per month
+              %ul.features
+                %li 500 Challenges
+                %li Email and phone support
+              .price_footer
+                = link_to "Select", product_form_path(p: Opportunity::EVAL_ENT), class: "action_button"
+            %li.price_block
+              %h3 Ultimate
+              .price
+                .price_figure
+                  %span.price_number $299
+                  %span.price_tenure per user, per month
+              %ul.features
+                %li 1,000 Challenges
+                %li Email and phone support
+              .price_footer
+                = link_to "Select", product_form_path(p: Opportunity::EVAL_ULTRA), class: "action_button"
+        
