--- a/app/views/tasks/_new_task.html.haml
+++ b/app/views/tasks/_new_task.html.haml
@@ -14,7 +14,7 @@
               Tasks require proof of completion in the form of a URL or image.          
         %span.error_message
         %a.next.button.button-actionable{ style:"float:right;"} Next
-      %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
+      .tips
         %h4 
           %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;", alt: "Tip"}
           Tips:
