changes to create a CR in the launchpad

--- a/app/views/tasks/_new_multiple_choice.html.haml
+++ b/app/views/tasks/_new_multiple_choice.html.haml
@@ -13,11 +13,11 @@
         %a.next.button.button-actionable{ style:"float:right; margin: 15px 0 -15px 0;" } Next
       .tips
         %h4 
-          %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;", alt: "Tip"}
+          %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "height:25px; width:25px;", alt: "Tip"}
           Tips:
         %ul
           %li 
-            You <strong>earn #{(Task::CREATOR_AWARD_POINTS+100).to_s} points</strong> per published question.
+            You earn <strong>#{(Task::CREATOR_AWARD_POINTS+100).to_s} points</strong> per published question.
           %li Keep the tone informal but direct.
           %li Check for spelling and grammar.        
     %div.step2.hide
