--- a/app/views/tasks/_new_task.html.haml
+++ b/app/views/tasks/_new_task.html.haml
@@ -21,7 +21,7 @@
         %ul{style:"font-size:13px;"}
           %li Tasks should serve as a record for what people have already done and a guide for improvement.
           %li 
-            You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published Task.
+            You earn <strong>#{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published Task.
     
     %div.step2.hide
       %fieldset{style: "display: inline-block; width:98%;"}
