--- a/app/views/tasks/_new_creative_response.haml
+++ b/app/views/tasks/_new_creative_response.haml
@@ -11,16 +11,17 @@
         %div.control-group{style:"width:350px;"}
           %div.controls
             = render "stored_resources/new_image"
-        %span.help-block{style: "margin-top:20px;"} What type of response should people give?
+        
+        -# The methods have to be changed for these options
+        %span.help-block{style: "margin-top:20px;"} Does this question require coding?
+        -# If the user selects yes, then go to step2. Otherwise, go to step3
         %label.radio
           = f.radio_button(:answer_sub_type, Task::TEXT, class: "answer_sub_type")
-          = Task::SUBTYPES[Task::TEXT]
+          Yes
         %label.radio
-          = f.radio_button(:answer_sub_type, Task::IMAGE, class: "answer_sub_type")
-          = Task::SUBTYPES[Task::IMAGE]
-        %label.radio
-          = f.radio_button(:answer_sub_type, Task::YOUTUBE, class: "answer_sub_type")
-          = Task::SUBTYPES[Task::YOUTUBE]
+          = f.radio_button(:answer_sub_type, Task::IMAGE, class: "answer_sub_type") 
+          No  
+                  
         %span.error_message
         %a.next.button.button-actionable{ style:"float:right;" } Next
       .tips
@@ -32,9 +33,23 @@
           %li Keep the tone informal but direct.
           %li Make sure you check for spelling and grammar.
           %li 
-            You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question.
-    
+            You earn <strong>#{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question.
+            
+    -# Method needs to be added to editor and correct answer    
     %div.step2.hide
+      %fieldset{style: "display: inline-block; width:98%;"}
+        %legend Create a CR
+        %span.help-block What code template should people use to respond to your question?
+        -# The editor should render with the appropriate language prefix (as it does in take_text)
+        %div{ id: "editor", style:"width: 97%; margin: 0 auto 5px auto; min-height: 175px; position: relative; padding-top:0;"}
+        %span.help-block{ style: "margin-top: 15px; "} If there is only one correct output for this code, place it here:
+        -# This method is soooo wrong
+        = f.text_field(:answer_new_2, placeholder: "Correct output...")
+        %div{ style: "margin-top: 10px; "}
+          %a.back.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;" } Back
+          %a.next.button.button-actionable{ style:"float:right;" } Next   
+    
+    %div.step3.hide
       %fieldset{style: "display: inline-block; width:98%;"}
         %legend Create a CR
         %h4 Your question:
@@ -54,7 +69,7 @@
         %a.back.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
         = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
     
-    %div.step3.hide{ style: "width: 98%; "}
+    %div.step4.hide{ style: "width: 98%; "}
       %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px; width: 40px;", alt: "Stoney"}
       %span{style:"position:relative; top:7px; font-size:35px;"} Nice work!
       %h4{style:"margin-top:12px; font-size:16px;"} Your Creative Response is now visible to the MetaBright community!
