--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -109,11 +109,11 @@
             .vitalinfo
               - if @user.groups.size > 0
                 - @user.groups.each do |group|
-                  %div{ style: "display: block;" }
+                  %div{ style: "margin-right: 8px;" }
                     = link_to group_path(group.permalink) do
                       = image_tag group.picture, class: "profile_group_icon img-circle", title: "Member of #{group.name}", alt: "Member of #{group.name}"
               - unless @user.location.blank?
-                %div
+                %div{ style: "display: block;" }
                   LOCATION:
                   %span= @user.location
             .shareprofile
