--- a/app/views/tasks/_new_creative_response.haml
+++ b/app/views/tasks/_new_creative_response.haml
@@ -27,16 +27,16 @@
             
     -# Method needs to be added to editor and correct answer    
     %div.step2.hide
-      %fieldset{style: "display: inline-block; width:98%;"}
+      %fieldset{style: "display: inline-block; width:98%; margin-bottom: -20px;"}
         %legend Create a CR
-        %span.help-block What code template should people use to respond to your question?
+        %span.help-block Users will answer the question with this template. You can edit it if necessary.
         %textarea{ name: "content", id: "answer_input", data: { template: @path.template.to_s } }= @path.template
         %div{ id: "editor", style:"width: 97%; margin: 0 auto 5px auto; min-height: 175px; position: relative; padding-top:0;"}
-        %span.help-block{ style: "margin-top: 15px; "} If there is only one correct output for this code, place it here:
+        %span.help-block{ style: "margin-top: 15px; "} If the responses to your question can be evaluated and there's only one correct answer, place that answer here:
         -# This method is soooo wrong
         = f.text_field(:answer_new_2, placeholder: "Correct output...")
         %div{ style: "margin-top: 10px; "}
-          %a.back.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;" } Back
+          %a.back.button.button-standard{ style:"float:left; text-shadow:none; color:#333;" } Back
           %a.next.button.button-actionable{ style:"float:right;" } Next   
     
     %div.step3.hide
