--- a/app/views/tasks/_new_creative_response.haml
+++ b/app/views/tasks/_new_creative_response.haml
@@ -7,8 +7,8 @@
       %fieldset{style: "display: inline-block; margin-right:28px; width:56%;"}
         %legend Create a CR
         %span.help-block What's your question?
-        = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Question...", style:"width:100%;")
-        %div.control-group{style:"width:350px;"}
+        = f.text_area(:question, rows: 2, class: "rows2", placeholder: "Question...", style:"width:100%;")
+        %div.control-group{ style:"width:350px;" }
           %div.controls
             = render "stored_resources/new_image"
         
@@ -41,10 +41,9 @@
         %legend Create a CR
         %span.help-block What code template should people use to respond to your question?
         -# The editor should render with the appropriate language prefix (as it does in take_text)
-        %div{ id: "editor", style:"width: 97%; margin: 0 auto 5px auto; min-height: 175px; position: relative; padding-top:0;"}
+        %div{ id: "editor", style: "width: 97%; margin: 0 auto 5px auto; min-height: 175px; position: relative; padding-top:0;" }
         %span.help-block{ style: "margin-top: 15px; "} If there is only one correct output for this code, place it here:
-        -# This method is soooo wrong
-        = f.text_field(:answer_new_2, placeholder: "Correct output...")
+        = text_field_tag("task[exact1]", nil, placeholder: "Correct output...")
         %div{ style: "margin-top: 10px; "}
           %a.back.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;" } Back
           %a.next.button.button-actionable{ style:"float:right;" } Next   
